# seg_counter

./: CMakeLists.txt  README.md
src/: main.c
